welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:32: error: ')' expected but ';' found.
(faire_ligne();
              ^